[tool.poetry]
name = "repl_nix_OmegaTticket1565segmentuniqIDPoC"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
tabulate = "^0.8.10"
inquirer = "^2.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
